--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,19 +3,30 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-    --mode: light;
     --color-primary: #571089;
-    --color-primaryLight-0: #6411ad;
-    --color-primaryLight-1: #6d23b6;
-    --color-primaryLight-2: #822faf;
-    --color-primaryLight-3: #973aa8;
-    --color-primaryLight-4: #ac46a1;
-    --color-primaryDark-0: #47126b;
+    --color-primary-light-0: #6411ad;
+    --color-primary-light-1: #6d23b6;
+    --color-primary-light-2: #822faf;
+    --color-primary-light-3: #973aa8;
+    --color-primary-light-4: #ac46a1;
+    --color-primary-deep-0: #47126b;
     --color-accent: #ea698b;
-    --color-accentDark-0: #d55d92;
-    --color-accentDark-1: #c05299;
-    --color-accentDark-2: #c05299;
-    --color-backgroundLight: #ffffff;
-    --color-backgroundDark: #0a0f1c;
+    --color-accent-deep-0: #d55d92;
+    --color-accent-deep-1: #c05299;
+    --color-accent-deep-2: #c05299;
+    --color-background: #ffffff;
     --font-primary: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --color-primary-dark: #571089;
+    --color-primary-light-0-dark: #6411ad;
+    --color-primary-light-1-dark: #6d23b6;
+    --color-primary-light-2-dark: #822faf;
+    --color-primary-light-3-dark: #973aa8;
+    --color-primary-light-4-dark: #ac46a1;
+    --color-primary-deep-0-dark: #47126b;
+    --color-accent-dark: #ea698b;
+    --color-accent-deep-0-dark: #d55d92;
+    --color-accent-deep-1-dark: #c05299;
+    --color-accent-deep-2-dark: #c05299;
+    --color-background-dark: #0a0f1c;
+    --font-primary-dark: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
