Topnav UI created, store integrated

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -16,9 +16,16 @@
     --color-accent-deep-0: #d55d92;
     --color-accent-deep-1: #c05299;
     --color-accent-deep-2: #c05299;
-    --color-background: #ffffff;
+    --color-background: #FCFAF8;
+    --color-background-pure: #ffffff;
+    --color-background-toned-0: #FCFAF8;
+    --color-background-toned-1: #F5F3F1;
+    --color-background-toned-2: #ECEAE8;
+    --color-background-toned-3: #E3E0DE;
+    --color-background-toned-4: #DAD6D4;
     --color-gray: #E1E1E1;
     --color-text: #ffffff;
+    --color-text-light: #4E4E4C;
     --color-text-primary: #47126b;
     --color-text-primary-light-0: #571089;
     --font-primary: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -35,8 +42,15 @@
     --color-accent-deep-1-dark: #c05299;
     --color-accent-deep-2-dark: #c05299;
     --color-background-dark: #0a0f1c;
+    --color-background-pure-dark: #000000;
+    --color-background-toned-0-dark: #121212;
+    --color-background-toned-1-dark: #1B191A;
+    --color-background-toned-2-dark: #242223;
+    --color-background-toned-3-dark: #2D2A2C;
+    --color-background-toned-4-dark: #373336;
     --color-gray-dark: #E1E1E1;
     --color-text-dark: #000000;
+    --color-text-light-dark: #BDBDBB;
     --color-text-primary-dark: #47126b;
     --color-text-primary-light-0-dark: #571089;
     --font-primary-dark: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
