Collapsed menu hover submenu reactivity added

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -17,6 +17,7 @@
     --color-accent-deep-1: #c05299;
     --color-accent-deep-2: #c05299;
     --color-background: #FCFAF8;
+    --color-background-inverse: #0a0f1c;
     --color-background-pure: #ffffff;
     --color-background-toned-0: #FCFAF8;
     --color-background-toned-1: #F5F3F1;
@@ -43,6 +44,7 @@
     --color-accent-deep-1-dark: #c05299;
     --color-accent-deep-2-dark: #c05299;
     --color-background-dark: #0a0f1c;
+    --color-background-inverse-dark: #FCFAF8;
     --color-background-pure-dark: #000000;
     --color-background-toned-0-dark: #121212;
     --color-background-toned-1-dark: #1B191A;
